@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "August 2013" "sg3_utils\-1.37" SG3_UTILS
+.TH SG3_UTILS "8" "October 2013" "sg3_utils\-1.37" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
